# ourtube

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile.cmd  deploy-win.cmd  index.html  main.cpp  nob  sitemap.xml
packaging/: PKGBUILD
src/: main.cpp
